lib_LTLIBRARIES = libjco.la
libjco_la_SOURCES = object.c \
		       class.c \
		       string.c \
		       base-classes.c \
		       logger.c \
		       memory.c \
		       iterator.c \
		       collection.c \
		       mutablecollection.c \
		       list.c \
		       immutablearraylist.c \
		       arraylist.c \
		       parsefmt.c \
		       asprintf.c \
		       hash.c \
		       hashset.c
libjco_la_CFLAGS = ${CFLAGS} -I. -I../include
